Adicionar novos scripts para monitoramento e coleta de dados de lives do YouTube, incluindo captura de chats e metadados, além de arquivos de configuração e requisitos.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .env
+monitor_de_lives_ao_vivo/dados
+scripts_auxiliares_e_extras/lives_gravadas_streamers
+scripts_auxiliares_e_extras/relatorio_lives_calvoesfera
+scripts_auxiliares_e_extras/videos_referencias_calvoesfera
